--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for snack in sw_snacks %}
+{% for snack in object_list %}
 <h2><a href="{% url 'snack_detail' snack.pk %}">{{ snack.name }}</a></h2>
 {% endfor %}
 {% endblock content %}
